Edited some unnecessary added letters

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
->
+
     <title>Odin-Recipe</title>
 </head>
 <body>
-  <h1> Odin Odin-Recipes</h1>  
-  <a href="recipes/moussaka.html">Moussaka</a>
+  <h1>Odin-Recipes</h1>  
+  <ul>
+  <li><a href="recipes/moussaka.html">Moussaka</a></li>
+  <li><a href="recipes/panagyurski_eggs.html">Panagyurski Eggs</a></li>
+  <li><a href="recipes/dunerkebab.html">Duner Kebab</a></li>
+  </ul>
 </body>
 </html>
